# naive

./: CMakeLists.txt  README.md  main.cpp  naive_array.h
include/: log_struct.h  n_allocator.h  n_array.h  n_buffer.h  n_concepts.h  n_deleter.h  n_point.h  n_real.h  n_search.h  n_shared_ptr.h  n_sort.h  n_stack.h  n_string.h  n_type_traits.h  n_unique_ptr.h  n_utils.h  n_vector.h  utils.h
include/test_stuff/: test_utils.h
test/n_array_test/: CMakeLists.txt  main.cpp
test/n_point_test/: CMakeLists.txt  main.cpp
test/n_real_test/: CMakeLists.txt  main.cpp
test/n_search_test/: CMakeLists.txt  main.cpp
test/n_shared_ptr/: CMakeLists.txt  main.cpp
test/n_sort_test/: CMakeLists.txt  main.cpp
test/n_stack_test/: CMakeLists.txt  main.cpp
test/n_string_test/: CMakeLists.txt  main.cpp
test/n_type_traits/: CMakeLists.txt  main.cpp
test/n_unique_ptr_test/: CMakeLists.txt  main.cpp
test/n_vector_test/: CMakeLists.txt  main.cpp
